Add 'optimized vs heuristic' experiment.
Add script to download data.  Add file to generate the underlying
workload.  Add osm to datasets.  Fix error in ART.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(optimized_vs_heuristic optimized_vs_heuristic.cpp)
 
 add_executable(generate_data experiments/generate_data.cpp)
 add_executable(generate_workload experiments/generate_workload.cpp)
+add_executable(generate_opt-vs-heuristic_workload experiments/generate_opt-vs-heuristic_workload.cpp)
 
 add_executable(btree_baseline experiments/baselines/btree_baseline.cpp)
 add_executable(hashtable_baseline experiments/baselines/hashtable_baseline.cpp)
